fixed all find bugs warnings