@@ -112,7 +112,7 @@ public abstract class AbstractDbmsPool implements ResourceProvider {
 	 * NOTE: Must be called by implementing classes after creating their own
 	 * (extended) datasource.
 	 */
-	public void setDataSource(DataSource dataSource) {
+	public synchronized void setDataSource(DataSource dataSource) {
 		this.dataSource = dataSource;
 	}
 
@@ -215,7 +215,7 @@ public abstract class AbstractDbmsPool implements ResourceProvider {
 		String maxOpenPreparedStatements = config.getChildText(Jeeves.Res.Pool.MAX_OPEN_PREPARED_STATEMENTS);
 		if (maxOpenPreparedStatements != null) {
 			try {
-				iMaxOpen = new Integer(maxOpenPreparedStatements);
+				iMaxOpen = Integer.valueOf(maxOpenPreparedStatements);
 			} catch (NumberFormatException nfe) {
 				throw new IllegalArgumentException(Jeeves.Res.Pool.MAX_OPEN_PREPARED_STATEMENTS+" has non-integer value "+maxOpenPreparedStatements);
 			}
