@@ -246,7 +246,7 @@ class MEF2Exporter {
 		if (id == null)
 			throw new MetadataNotFoundEx("uuid=" + uuid);
 
-		Set<String> relatedIds = Get.getRelationIds(new Integer(id), "normal", context);
+		Set<String> relatedIds = Get.getRelationIds(Integer.valueOf(id), "normal", context);
 		if (relatedIds.size() == 0)
 			return "";
 
