@@ -80,7 +80,7 @@ public class GeonetworkAuthenticationProvider extends AbstractUserDetailsAuthent
 			if (userXml != null) {
 				if (authentication != null && authentication.getCredentials() != null) {
 					String oldPassword = authentication.getCredentials().toString();
-					Integer iUserId = new Integer(userXml.getChildText(Geonet.Elem.ID));
+					Integer iUserId = Integer.valueOf(userXml.getChildText(Geonet.Elem.ID));
 					if(PasswordUtil.hasOldHash(userXml)) {
 						userXml = PasswordUtil.updatePasswordWithNew(true, oldPassword , oldPassword, iUserId , encoder, dbms);
 					}
