@@ -77,7 +77,7 @@ public class Transform {
 
 				// save transformed field
 
-				dbms.execute("UPDATE " + table + " SET " + field + " = ? WHERE id = ?", newField, new Integer(id));
+				dbms.execute("UPDATE " + table + " SET " + field + " = ? WHERE id = ?", newField, Integer.valueOf(id));
 				System.out.println("- record " + id + " saved"); // DEBUG
 			}
 			// commit changes
